--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.steineron</groupId>
+            <artifactId>RunThisMethod</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
